fix: not load dnd on iOS

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,10 +7,10 @@
   display: none;
 } */
 
-.scrollbar-none {
-  -ms-overflow-style: none;
-  overflow-y: hidden;
-  /* scrollbar-width: none; */
+.draggable {
+  -webkit-user-drag: element;
+  user-select: none;
+  touch-action: none;
 }
 
 .hide-scrollbar {
@@ -20,6 +20,12 @@
 
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
+}
+
+.scrollbar-none {
+  -ms-overflow-style: none;
+  overflow-y: hidden;
+  /* scrollbar-width: none; */
 }
 
 .mercy-font {
